[package]
name = "child-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.4.1"
chrono = "0.4.31"
futures = "0.3.30"
log = "0.4.20"
pin-project-lite = "0.2.13"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
sha256 = "1.5.0"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "time"] }
tokio-stream = "0.1.14"
uuid = { version = "1.6.1", features = ["v4"] }
